wos categories are ellipsified and design no longer breaks on IE

--- a/css/istexfacets.css
+++ b/css/istexfacets.css
@@ -37,8 +37,8 @@
   float: right;
   display: inline-block;
   min-width: 10px;
-  padding: 1px 4px 1px 4px;
-  margin-top: 4px;
+  padding: 0 4px 0 4px;
+  margin-top: 0;
   font-size: small;
   font-weight: bold;
   color: #FFF;
